...
        let message = presenter.makeResultMessage()
        
        let alert = AlertModel(
            title: result.title,
            message: message,
            buttonText: result.buttonText,
            accessibilityIdentifier: "Game result"
        ) { [weak self] in
            self?.presenter.restartGame()
        }
        
        ResultAlertPresenter.show(in: self, with: alert)
    }
...
